--- a/rtx-config/rtx.conf
+++ b/rtx-config/rtx.conf
@@ -1,43 +1,46 @@
-rtx.autoExposure.enabled = False
-rtx.graphicsPreset = 0
-rtx.bloom.intensity = 0.002
-rtx.bloom.sigma = 0.2
 rtx.enableFog = False
 rtx.camera.enableFreeCamera = True
-rtx.ignoreGameDirectionalLights = True
-rtx.camera.freeCameraPosition = 0.622303, -0.000248555, 0.0777478
+rtx.decalTextures = 0x26626F3D0B9542FD, 0xFA2BCD3686C0FA3D, 0x73AC780C8EDE6485, 0x1A5064AFE9DE1A85, 0xB1B07560C5C4F8B5, 0xE1CD26CC895E4681, 0xC10F1EC79DE2CBF4, 0xCF4FFFFC999E5747, 0x1C2A7D03113BDFEA, 0xA244C9C2D5956E1A, 0x100B6B79A80CD45A, 0x68993E1DC1CF7089, 0x8A0FD365BBDBE0DC, 0xDEA24817389E2C5C, 0xB0E2C6B971A94080, 0xA6A23F74235A7057, 0xCA4EAF478D3E998C, 0x6E81524EF4DFCA4C, 0xE087EFA2E4CF70BF, 0xD7D734FCCB8567EF, 0xE6EE9AAA109BCCAE, 0xBDF2CC42EEF5BC8, 0x93550F5E52290532, 0x62DC87C416A654CD, 0x52E4F12538F7B577, 0xC0734037E2B19765, 0xDA2DA111DA839365, 0x1F6F1587CBD0596D, 0x377AD9C79A2E9F23
+rtx.antiCulling.light.enable = True
+rtx.terrainBaker.material.properties.roughnessConstant = 0
+rtx.autoExposure.evMinValue = 0
+rtx.graphicsPreset = 0
+rtx.bloom.intensity = 0.001
 rtx.defaultToAdvancedUI = True
-rtx.volumetricTransmittanceMeasurementDistance = 800
-rtx.uiTextures = 0x3FC78C823061BDB0, 0x5970DA3808FA8128
-rtx.captureInstanceStageName = 2023-10-02_21-12-23.usd
-rtx.effectLightIntensity = 0.01
+rtx.volumetricTransmittanceMeasurementDistance = 300
+rtx.uiTextures = 0x5970DA3808FA8128, 0x3FC78C823061BDB0, 0xDA451DD0D39CD1A5
+rtx.hashCollisionDetection.enable = True
+rtx.captureInstanceStageName = 2023-10-11_00-47-42.usd
+rtx.captureShowMenuOnHotkey = False
+rtx.qualityDLSS = 3
+rtx.dlssPreset = 2
+rtx.sceneScale = 0.01
+rtx.dynamicDecalTextures = 0xBE686B6B6B8AE7ED
+rtx.effectLightIntensity = 0.1
 rtx.effectLightRadius = 0.5
-rtx.emissiveBlendOverrideEmissiveIntensity = 0.1
+rtx.emissiveBlendOverrideEmissiveIntensity = 0.05
+rtx.vertexColorStrength = 1
 rtx.emissiveIntensity = 8
+rtx.terrainBaker.cascadeMap.levelHalfWidth = 0.1
+rtx.enableCulling = False
 rtx.terrainBaker.cascadeMap.useTerrainBBOX = False
 rtx.enableUnorderedEmissiveParticlesInIndirectRays = True
 rtx.enableVolumetricLighting = True
 rtx.fallbackLightMode = 0
-rtx.lightConverter = 0xA9C9EC59668F8FA3
 rtx.fallbackLightType = 1
 rtx.psrrMaxBounces = 15
-rtx.freeCameraSpeed = 100
-rtx.ignoreTextures = 0x6F0AB36E2C7DB1A6, 0x12327A08E725DEE0, 0x6D2446E17BAC3050, 0x1AAF8D953797EC8, 0x2F580E4763FAB662, 0xB6E06CE024FE9111
+rtx.freeCameraSpeed = 500
+rtx.ignoreGameDirectionalLights = True
+rtx.ignoreTextures = 0xBC5C29D1C91B4980, 0x6D2446E17BAC3050, 0x1AAF8D953797EC8, 0x12327A08E725DEE0, 0x2F580E4763FAB662, 0xB6E06CE024FE9111, 0x4DBD066761A29F5B, 0x6F0AB36E2C7DB1A6
 rtx.instanceOverrideInstanceIdx = 2147483647
 rtx.legacyMaterial.roughnessConstant = 0.5
-rtx.lightmapTextures = 0x6F0AB36E2C7DB1A6, 0x1AAF8D953797EC8, 0xB6E06CE024FE9111
-rtx.particleTextures = 0x166C27331EA67091, 0x448152B6FE9F348C, 0xB573F6EEBBA1EC5D, 0xDF22766F02C29A32, 0x48188D919022F08A, 0x5D81D806AE2DE92, 0xE6FC7CF0FE185EE3
+rtx.particleTextures = 0x166C27331EA67091, 0x448152B6FE9F348C, 0xB573F6EEBBA1EC5D, 0x5D81D806AE2DE92, 0x48188D919022F08A, 0x6D4F8079AE58D98B, 0xC130E4C01D8A1B63, 0xE6FC7CF0FE185EE3, 0xFE25C9E788C7A3AA, 0xB51546930E6B5738, 0x2549846347288884, 0x6526CFA8DF18FFF9, 0xEA35A9BFBDAE3C3B
 rtx.pstrMaxBounces = 15
-rtx.sceneScale = 0.01
-rtx.terrainBaker.material.properties.emissiveIntensity = 3
-rtx.singleOffsetDecalTextures = 0xB1B07560C5C4F8B5, 0x1F6F1587CBD0596D, 0x1A5064AFE9DE1A85, 0xFA2BCD3686C0FA3D, 0x100B6B79A80CD45A, 0x1C2A7D03113BDFEA, 0x68993E1DC1CF7089, 0xC10F1EC79DE2CBF4, 0xDEA24817389E2C5C, 0xB0E2C6B971A94080, 0xA6A23F74235A7057, 0xE1CD26CC895E4681, 0xCF4FFFFC999E5747, 0x6E81524EF4DFCA4C, 0xE087EFA2E4CF70BF, 0xD7D734FCCB8567EF, 0xE6EE9AAA109BCCAE, 0xBDF2CC42EEF5BC8, 0x5DE0D8CB3888A896
 rtx.skyBrightness = 3
 rtx.skyDrawcallIdThreshold = 20
-rtx.terrainBaker.cascadeMap.levelHalfWidth = 0.1
 rtx.terrainBaker.cascadeMap.levelResolution = 8192
-rtx.terrainBaker.material.properties.metallicConstant = 0.6
+rtx.terrainBaker.material.properties.metallicConstant = 0.4
 rtx.terrainBaker.cascadeMap.maxLevels = 16
-rtx.terrainBaker.material.bakeSecondaryPBRTextures = True
-rtx.terrainBaker.material.properties.roughnessConstant = 0
-rtx.terrainTextures = 0x2E80D493174B8A86, 0xE2485858B755EC6, 0x356363866F6BBC46, 0x48396BC08D94FC66, 0xD4CA4C347366FA3E, 0x965CA4DD18709BFE, 0x8B58CC4A15D2374E, 0x44FC8A58BEA07908, 0xF997EA2500EEA5E2, 0x70D3CAA09EE18851, 0x3B3912454EB91F8C, 0x3947C13FDFE5C20C, 0x14E1D47A76967369, 0x846D75969E982E15, 0x1CBCCC6D11EB7C15, 0x53D12E8DA3B6B9D7, 0x1A1DBB8DC0AA7F38, 0xE251774FB8D7A76, 0x586AA219999BFAE5, 0xD178BA512E83ED2E, 0xFA0CBCA7BB432409, 0x59296793798A7318, 0xEB4B170A5C02C49B, 0x2E359A6CA3C8C224, 0xC5F5567F9308C01D, 0x6750DC471085D8AF, 0xF1E88AF82A37D427, 0x25FFEE434C6DAF33, 0xCF60DEB390999D50, 0x11226D5C0D638919, 0x6A2AA1317D932072
+rtx.terrainBaker.material.properties.emissiveIntensity = 3
+rtx.terrainTextures = 0x2666BCF9E135D13E, 0x116D716F4DD594FE, 0x965CA4DD18709BFE, 0x48396BC08D94FC66, 0x356363866F6BBC46, 0x9A29B8065C445606, 0xE2485858B755EC6, 0x2E80D493174B8A86, 0xD90D4D3A363E2D06, 0x24D461DD0445BA0E, 0x8B58CC4A15D2374E, 0x44FC8A58BEA07908, 0xF997EA2500EEA5E2, 0x71C896437A8ECE62, 0xA501878863BF1862, 0xA943EC96523ACFD1, 0x2B8A395A9A8E7D1, 0x9BAF29511C4CCD51, 0x3947C13FDFE5C20C, 0x3B3912454EB91F8C, 0x846D75969E982E15, 0x53F3C7A9D23B2155, 0x1A1DBB8DC0AA7F38, 0xE251774FB8D7A76, 0x59296793798A7318, 0x11970ED1D3F53A98, 0xEC0A4AC604231C9B, 0xEB4B170A5C02C49B, 0x6744B3BBF6879D1B, 0x2E359A6CA3C8C224, 0xEF58999AB795DA6F, 0x6750DC471085D8AF, 0xF1E88AF82A37D427, 0x25FFEE434C6DAF33, 0xCF60DEB390999D50, 0x11226D5C0D638919, 0xC4E90656FB8BB5BA, 0xF1528EB32DF82968, 0xFC62E335A5FCBEA8, 0x79366244E37A044D, 0x34053DBBE26B9B8D, 0x3936AACACA58F68D, 0x9BF8D6D65E101671, 0x947C96A2C79A2F71, 0x14E1D47A76967369, 0x74B3ED2DCD92B917, 0x53D12E8DA3B6B9D7, 0xE54542A76742C01E, 0xE68AB08F27BB7B5E, 0x576EFD0F6C2602, 0x417AD481D0FD6563, 0x7E088BD2701AB941, 0x9BFFDC808D8F81C1, 0x1B67CA7C24B9DF56, 0x2052A1086EB20D1D, 0xDF24CDC606001ADD, 0xC5F5567F9308C01D, 0xE00210386D1E3D7B, 0xA29EC316CFB81984, 0x39B9C6A5749FF9FC, 0x6B6E9CEEAB4A1675, 0x3DECA5BC4C2A4475, 0x96EEF8EB6213D1CA, 0xC3613EEED624E7B0, 0xD938EB6726CBB3F9, 0x6342AB0C515A666B, 0x53204D954C4D1EA1, 0x577FC98660A9B111, 0x70D3CAA09EE18851, 0xB25CD4558761393D, 0xFA0CBCA7BB432409, 0x9B050FA5F92DA04B
 rtx.zUp = True
