--- a/rtx-config/rtx.conf
+++ b/rtx-config/rtx.conf
@@ -1,47 +1,52 @@
-rtx.enableFog = False
-rtx.camera.enableFreeCamera = True
-rtx.decalTextures = 0x179DAA02A300B5, 0xB1B07560C5C4F8B5, 0x1EA667D32094E4B5, 0x73AC780C8EDE6485, 0x1A5064AFE9DE1A85, 0x26626F3D0B9542FD, 0xFA2BCD3686C0FA3D, 0xE1CD26CC895E4681, 0xC10F1EC79DE2CBF4, 0xAD7853E47B3A30B4, 0x4F31AA6D48F675B4, 0xEACB6E8920926B34, 0xCF4FFFFC999E5747, 0xB9ED1296A01BC007, 0x20B40CFC696E5607, 0x1C2A7D03113BDFEA, 0x100B6B79A80CD45A, 0xA244C9C2D5956E1A, 0x68993E1DC1CF7089, 0xDEA24817389E2C5C, 0xB6E708D8E7AF40DC, 0x8A0FD365BBDBE0DC, 0xB0E2C6B971A94080, 0xA6A23F74235A7057, 0x370C14AFE8873E97, 0xDB4F6AFB517CAA97, 0x6E81524EF4DFCA4C, 0xCA4EAF478D3E998C, 0x690F2FB2C997D08C, 0xE087EFA2E4CF70BF, 0xD7D734FCCB8567EF, 0xE6EE9AAA109BCCAE, 0x39FB3AAB60747A6E, 0xBDF2CC42EEF5BC8, 0x93550F5E52290532, 0xE857B38281B72432, 0x4F8A56FED77DDE4D, 0x6A1A9CA05165C04D, 0x62DC87C416A654CD, 0xD762DA75D80310CD, 0xDA2DA111DA839365, 0xC0734037E2B19765, 0x1B2381220B2BA1E5, 0x1473D944D478BF6D, 0x1F6F1587CBD0596D, 0x377AD9C79A2E9F23, 0x1EE4130DA1BEB763, 0x270E41E9BF89516, 0xBBB8BF8C92DEC94F, 0x5F3832E42403337A, 0x52E4F12538F7B577, 0xC7593BF9215112DD, 0xA83570EF33A5A8DD, 0xC7F05BBBC057A8A1, 0xC1AF0CBD63C10C31, 0xC32FC2FE83524F1, 0xE86B8504887C048A, 0xED9902C92AE292A7, 0x76341CF9D5234FA9, 0xCAA3DB606014C5A9, 0x3C31FE7840CBA7AB, 0xD10042B22ABF35AB, 0x62D1406D92A37C98, 0x8448D5CB4F5BA758, 0x16B40D1EEC9E27BC, 0x60ED3AC78CF680DE, 0x7B18CDB33695211E, 0x1F2C3D47B06E8F92, 0x5B60DED0510F7126, 0x46A203004587CD26, 0x5B5ADA4EB6EEB1E6, 0xEA85998D804E9490, 0x2817D9F620410AAB, 0x9866DB66F63044F2, 0xD301610460488EF2, 0x2752E220AA2B6354, 0xEB3D975D84C6CE25, 0x6471AA8E21792348, 0xC589CC06B2AC0199, 0x8C9912133F5BB19D, 0xCD44D3EA9AA69F9, 0x924129303B0C6623, 0x639C0DDED68BBB61, 0x93F406F44FB22400, 0x120BFD9655D0B8CF, 0xFC343E2104C444F9, 0xD1C47EE251D54BC5, 0x2D478C106B96E75F, 0x2AD12B8E6519933E, 0xF27E03C013D78EE, 0x39900FDE1C1355CE, 0xF8660E4F3365684, 0xA300D2814A86F292, 0xE2CC01CB09CFEE92, 0xCD8F49EB2C089B0C, 0x5A42ED9579C1AD0C, 0xB9F21C86BC064125, 0x5474DEB85101C790, 0xD17D8294D4CC77CA, 0x62C128812A74B401, 0xF3CD305AF0C2AA4E, 0xD32A25435C1417E8, 0x92593F8AC5D59E7F, 0x9DADC26A819A1C0, 0xB39DCF22981894C2, 0x271D42CDE974CA13, 0xD7860597F3A82784, 0xB7C99BD22EA62D84, 0x9E20810003F578BC, 0x8083470239CE7870, 0xFA8265F4BD5A2F59, 0xBB8B143E7E8D0A5, 0xFF5E2203150AD441, 0xF1C370482910054D, 0x467D745262AE4608, 0x99E24912688D846F, 0xAD6EE7A8F60CF48D, 0x107A3A48D9A73324, 0xC8DADB89D58952EB, 0xAB9F3152C9C7DC, 0x81FD310677C654E4, 0xE213E3B85B25B4D5, 0x752EDE013BC9D222, 0x89A9C58AD0EDFB2E, 0xB883C7FEFBBB93C, 0x31CF831DB8D3F383
-rtx.antiCulling.light.enable = True
-rtx.terrainBaker.material.properties.roughnessConstant = 0
-rtx.autoExposure.evMinValue = 0
+rtx.geometryGenerationHashRuleString = positions,indices,geometrydescriptor,vertexlayout,vertexshader
+rtx.autoExposure.enabled = False
 rtx.graphicsPreset = 0
-rtx.bloom.intensity = 0.001
-rtx.defaultToAdvancedUI = True
-rtx.volumetricTransmittanceMeasurementDistance = 800
-rtx.uiTextures = 0x3FC78C823061BDB0, 0x5970DA3808FA8128, 0xDA451DD0D39CD1A5
-rtx.hashCollisionDetection.enable = True
-rtx.captureInstanceStageName = 2023-10-11_03-54-56.usd
-rtx.captureShowMenuOnHotkey = False
-rtx.ignoreTextures = 0x12327A08E725DEE0, 0x1AAF8D953797EC8, 0x6D2446E17BAC3050, 0xBC5C29D1C91B4980, 0x2F580E4763FAB662, 0xB6E06CE024FE9111, 0x4DBD066761A29F5B, 0x6F0AB36E2C7DB1A6
+rtx.bloom.intensity = 0.02
+rtx.bloom.sigma = 0.2
+rtx.opaqueMaterial.metallicBias = 0.097
+rtx.ignoreTextures = 0x4DBD066761A29F5B, 0x1AAF8D953797EC8, 0xBC5C29D1C91B4980, 0x3540689C4AD8FAE0, 0xB6E06CE024FE9111, 0x2F580E4763FAB662, 0x6F0AB36E2C7DB1A6
 rtx.dlfg.enable = False
+rtx.defaultToAdvancedUI = True
+rtx.volumetricTransmittanceMeasurementDistance = 400
+rtx.uiTextures = 0x5970DA3808FA8128, 0x3FC78C823061BDB0, 0xEDAA7402F2B0E4BB
+rtx.captureInstanceStageName = CJ_House.usd
+rtx.fusedWorldViewMode = 2
+rtx.enableFog = False
+rtx.decalTextures = 0x26626F3D0B9542FD, 0x62DC87C416A654CD, 0xC7593BF9215112DD, 0x64DC83584D2F7779
 rtx.qualityDLSS = 3
 rtx.dlssPreset = 2
 rtx.sceneScale = 0.01
 rtx.dynamicDecalTextures = 0xBE686B6B6B8AE7ED
-rtx.effectLightIntensity = 0.1
-rtx.effectLightRadius = 0.5
-rtx.emissiveBlendOverrideEmissiveIntensity = 0.05
-rtx.vertexColorStrength = 1
-rtx.emissiveIntensity = 8
-rtx.terrainBaker.cascadeMap.levelHalfWidth = 0.1
+rtx.emissiveBlendOverrideEmissiveIntensity = 0.5
+rtx.vertexColorStrength = 0.8
+rtx.emissiveIntensity = 10
+rtx.terrainBaker.cascadeMap.levelHalfWidth = 0.001
 rtx.enableCulling = False
 rtx.terrainBaker.cascadeMap.useTerrainBBOX = False
+rtx.ignoreGamePointLights = True
 rtx.enableUnorderedEmissiveParticlesInIndirectRays = True
-rtx.enableVolumetricLighting = True
 rtx.fallbackLightMode = 0
-rtx.fallbackLightType = 1
-rtx.psrrMaxBounces = 15
-rtx.freeCameraSpeed = 500
+rtx.opaqueMaterial.roughnessBias = -0.108
 rtx.ignoreGameDirectionalLights = True
+rtx.ignoreGameSpotLights = True
+rtx.localtonemap.boostLocalContrast = True
 rtx.instanceOverrideInstanceIdx = 2147483647
-rtx.legacyMaterial.roughnessConstant = 0.5
-rtx.particleTextures = 0x166C27331EA67091, 0x448152B6FE9F348C, 0xB573F6EEBBA1EC5D, 0x48188D919022F08A, 0x5D81D806AE2DE92, 0xC130E4C01D8A1B63, 0xE6FC7CF0FE185EE3, 0x6D4F8079AE58D98B, 0xFE25C9E788C7A3AA, 0xB51546930E6B5738, 0x2549846347288884, 0xCE919FA9A67900C4, 0x6526CFA8DF18FFF9, 0xEA35A9BFBDAE3C3B, 0xB1A0314C29C432C, 0xE7FE182E774633D3, 0x4B7E9485CB04BC77
+rtx.legacyMaterial.metallicConstant = 0
+rtx.legacyMaterial.roughnessConstant = 0.6
+rtx.postfx.enableMotionBlur = False
+rtx.lightConversionDistantLightFixedAngle = 0.01
+rtx.particleTextures = 0xDF22766F02C29A32, 0x48188D919022F08A, 0xA79A316B36E6FB9A, 0x5D81D806AE2DE92, 0x2549846347288884, 0x76BD5D19A139B6BC, 0xB573F6EEBBA1EC5D, 0xACD424B612C0C659, 0xB1A0314C29C432C, 0x7EBF6573670698B7, 0x448152B6FE9F348C, 0x44AF0EF987753198
+rtx.lightConversionEqualityDistanceThreshold = 0.01
+rtx.localtonemap.exposure = 1
+rtx.localtonemap.exposurePreferenceSigma = 2
 rtx.skyForceHDR = True
-rtx.pstrMaxBounces = 15
-rtx.skyDrawcallIdThreshold = 20
-rtx.terrainBaker.cascadeMap.levelResolution = 8192
+rtx.localtonemap.highlights = 2
+rtx.postfx.enableChromaticAberration = False
+rtx.postfx.enableVignette = False
+rtx.skyBoxTextures = 0x166C27331EA67091
+rtx.skyDrawcallIdThreshold = 1000
 rtx.terrainBaker.material.properties.metallicConstant = 0.4
 rtx.terrainBaker.cascadeMap.maxLevels = 16
-rtx.terrainBaker.material.properties.emissiveIntensity = 3
-rtx.terrainTextures = 0x2E80D493174B8A86, 0xD90D4D3A363E2D06, 0x356363866F6BBC46, 0x9A29B8065C445606, 0xE2485858B755EC6, 0x48396BC08D94FC66, 0x965CA4DD18709BFE, 0x2666BCF9E135D13E, 0x116D716F4DD594FE, 0x8B58CC4A15D2374E, 0x24D461DD0445BA0E, 0x44FC8A58BEA07908, 0x71C896437A8ECE62, 0xA501878863BF1862, 0xF997EA2500EEA5E2, 0x577FC98660A9B111, 0x9BAF29511C4CCD51, 0xA943EC96523ACFD1, 0x2B8A395A9A8E7D1, 0x3B3912454EB91F8C, 0x3947C13FDFE5C20C, 0x53F3C7A9D23B2155, 0x846D75969E982E15, 0x1A1DBB8DC0AA7F38, 0xE251774FB8D7A76, 0x11970ED1D3F53A98, 0x59296793798A7318, 0x6744B3BBF6879D1B, 0xEC0A4AC604231C9B, 0xEB4B170A5C02C49B, 0x2E359A6CA3C8C224, 0x6750DC471085D8AF, 0xEF58999AB795DA6F, 0xF1E88AF82A37D427, 0x25FFEE434C6DAF33, 0xCF60DEB390999D50, 0x11226D5C0D638919, 0xC4E90656FB8BB5BA, 0xFC62E335A5FCBEA8, 0xF1528EB32DF82968, 0x3936AACACA58F68D, 0x34053DBBE26B9B8D, 0x79366244E37A044D, 0x947C96A2C79A2F71, 0x14E1D47A76967369, 0x74B3ED2DCD92B917, 0xE68AB08F27BB7B5E, 0xE54542A76742C01E, 0x576EFD0F6C2602, 0x417AD481D0FD6563, 0x9BFFDC808D8F81C1, 0x7E088BD2701AB941, 0x1B67CA7C24B9DF56, 0xC5F5567F9308C01D, 0xDF24CDC606001ADD, 0xE00210386D1E3D7B, 0xA29EC316CFB81984, 0x39B9C6A5749FF9FC, 0x3DECA5BC4C2A4475, 0x96EEF8EB6213D1CA, 0xC3613EEED624E7B0, 0xD938EB6726CBB3F9, 0x6342AB0C515A666B, 0x53204D954C4D1EA1, 0x70D3CAA09EE18851, 0xB25CD4558761393D, 0x9B050FA5F92DA04B, 0x6A2AA1317D932072, 0x9E60DA157216A3F6, 0x3D8C5085002CA6C8, 0xE3D952CEF67D2EED
+rtx.terrainBaker.material.properties.roughnessConstant = 0.05
+rtx.terrainTextures = 0xE2485858B755EC6, 0x356363866F6BBC46, 0xE5DF102DE6653C3E, 0x965CA4DD18709BFE, 0xA370281E50C106A6, 0x812D9D2960B080A6, 0x48396BC08D94FC66, 0x1A1DBB8DC0AA7F38, 0x14E1D47A76967369, 0x70D3CAA09EE18851, 0xA943EC96523ACFD1, 0xF997EA2500EEA5E2, 0x3B3912454EB91F8C, 0x3947C13FDFE5C20C, 0xE251774FB8D7A76, 0xC5F5567F9308C01D, 0x8B58CC4A15D2374E, 0x24D461DD0445BA0E, 0xEC0A4AC604231C9B, 0xF83351EB5C01DEF0, 0xC3613EEED624E7B0, 0xB25CD4558761393D, 0xA29EC316CFB81984, 0x6C45E61EE80F7B2, 0x5E2964B4BC5045B2, 0x3936AACACA58F68D, 0xB46E9995DD61F156, 0x44FC8A58BEA07908, 0x3DECA5BC4C2A4475, 0xE6DAEB3B97D1CFA8, 0xF1528EB32DF82968, 0x60C56D66478C396E, 0x3D56C3E561D6ADCA, 0xFA0CBCA7BB432409
 rtx.zUp = True
