--- a/rtx-config/rtx.conf
+++ b/rtx-config/rtx.conf
@@ -1,57 +1,48 @@
-rtx.autoExposure.enabled = False
-rtx.terrainBaker.material.properties.roughnessConstant = 0.05
-rtx.autoExposure.evMinValue = 0
-rtx.graphicsPreset = 0
-rtx.bloom.intensity = 0.02
-rtx.bloom.sigma = 0.2
-rtx.ignoreTextures = 0xBC5C29D1C91B4980, 0x3540689C4AD8FAE0, 0x1AAF8D953797EC8, 0xB6E06CE024FE9111, 0x6F0AB36E2C7DB1A6, 0x8F34BF39FA23F39D
-rtx.dlfg.enable = False
+rtx.allowCubemaps = True
+rtx.enableEmissiveBlendEmissiveOverride = False
 rtx.defaultToAdvancedUI = True
-rtx.uiTextures = 0x3FC78C823061BDB0, 0x5970DA3808FA8128, 0xD9D198EB6B8F6031, 0xC412E7D486FF9E5C
-rtx.captureInstanceStageName = 2023-12-30_09-37-54.usd
+rtx.uiTextures = 0x5825FA46CF812787, 0x3259CE3885F90642, 0x1D3D385E969C83FA, 0x2FB7ADBE915018A, 0x3781F525BBBD9FBD, 0x9D36811F7D6CB321
+rtx.restirGI.virtualSampleMaxDistanceRatio = 0.5
+rtx.captureInstanceStageName = capture.usd
+rtx.neeCache.enableModeAfterFirstBounce = 2
+rtx.animatedWaterTextures = 0x3EF016691656F970, 0xDE8822B32A6BC670, 0x4FFDCE29E1793968, 0xC120BA4E84CE7AE8, 0x51DB758F888C8A7C, 0x6E8F5B279EFEC93C, 0x6363571649761AFC, 0xC746F1683798424, 0xCD648C3913D2AAE4, 0x334EFD7D0C9A0557, 0x418DEBB0F4A2A197, 0x7492C2957CEB1377, 0x1225B4DFF6506137, 0x66ABA8DF426979B7, 0xC75EC8EE882E2237, 0x71C53CBDEFFBA77, 0x5D20FD88C0A70C13, 0x566FF5AF1575B4F6, 0xA006DCDD5668F14C, 0x1A1A35CA8382015E, 0x1D024B67914A61A9, 0xDD8A0AE1E5EB9369, 0x1DE1B1AA2398A7DC, 0xD9EDCDEC1D0221F2, 0x80A5DB2A47161FDF, 0x434FC43F7BF7EC1F, 0xE692218518A4111F, 0x5FAE7571446D5A1F, 0x9BD20D5EED3F151F, 0xEFA8FB7D8D3AA6C3, 0x4E8D2FCE735ACA80, 0xD04D48CB7D9648C0, 0x47F0D076364FE100, 0x5D69653013D1FE27, 0xFAD6ECF37BFBDB, 0xDC55F6D9DEBCADB, 0x2FAC7A403DB8EF89, 0xF40C8156FAB61149, 0x91E3C33F56C7C402, 0xDB6D83AA39677D42, 0x91548A1865B639AC, 0x9B7E84B205AABCF3, 0xDFE4F77C157CEA2, 0x9A6022AB4E9D706A, 0x923E2560A8DB36F4, 0x7EAA20F654D73E23, 0x6E419569F50C57A3, 0xCE2FA1C23180ECA3, 0x8398EA381E2D5BAB, 0x278367335989356B, 0xD48CB1BB322048DA, 0x48519E8FE2DC6D8B, 0xDB5C2DFA92C01020, 0x3DFD2B96C1930F78, 0xA4EED0463F70FD79, 0x2502A4AFB4CADBB, 0x529A2C691C741B21, 0x120BED9788C58EDD, 0x71D279975B0F4808, 0x75007E056037B9BF
+rtx.autoExposure.enabled = False
+rtx.graphicsPreset = 0
+rtx.demodulate.enableDirectLightBoilingFilter = False
+rtx.bloom.intensity = 0.01
+rtx.bloom.sigma = 0.2
+rtx.restirGI.boilingFilterRemoveReservoirThreshold = 30
 rtx.fusedWorldViewMode = 2
-rtx.enableFog = False
-rtx.decalTextures = 0xC7593BF9215112DD, 0xA83570EF33A5A8DD, 0x4F8A56FED77DDE4D, 0x6A1A9CA05165C04D, 0xD762DA75D80310CD, 0x62DC87C416A654CD, 0x26626F3D0B9542FD, 0xFC343E2104C444F9, 0x64DC83584D2F7779, 0xE857B38281B72432, 0x698BD0EA08F2FA1A, 0xA244C9C2D5956E1A, 0x270E41E9BF89516, 0x65AEE04BC8C5170E, 0x48C02AD1125B2901, 0xBBB8BF8C92DEC94F, 0xA7F14FCBAAF9ED8F, 0x1B91964934D3E1B1, 0x5F3832E42403337A, 0x6440870CB1968F57, 0xD1C47EE251D54BC5, 0xBB367EC4E0E391D9, 0xFB4A985871E3E719, 0xB748503A780AB19, 0x979CA775F553C919, 0xAD8829721E150419, 0x571FBE9B9F24D819, 0xEEFB9A9B22A3D0C7, 0x27476963037E64C7, 0xB39DCF22981894C2, 0x378639BB0F06B566, 0x1E6A6CBCE95751C0, 0x9DADC26A819A1C0, 0x1B2381220B2BA1E5, 0x56190D6EE7379FE5, 0xB9F21C86BC064125, 0x92593F8AC5D59E7F, 0x73D7941E226FE895, 0x16B40D1EEC9E27BC, 0xB883C7FEFBBB93C, 0xE0D2DAA8FA3FA80A, 0xCD638301E4E509CA, 0xD17D8294D4CC77CA, 0x752EDE013BC9D222, 0x68C3D8C2B6FCC5E2, 0xAFDE53E33CFB97E2, 0xCE0EF26C9FB77060, 0x7EC135F08BBAF060, 0xC78E345092715CE0, 0x9C59FF3DE5467320, 0x89A9C58AD0EDFB2E, 0xE1B493F470D3042E, 0x6E04798533B89A2E, 0x81FD310677C654E4, 0xC8DADB89D58952EB, 0x3C31FE7840CBA7AB, 0x7A00B183BDB7A9AB, 0xD10042B22ABF35AB, 0x984E513D63D77369, 0x5F048D4AB7B5936A, 0x1EC7C729C44FD99E, 0x72FA4FF4C97306DE, 0x60ED3AC78CF680DE, 0x26B88913FF4592DE, 0xB8FC37A385E954AD, 0x9C17DE9E7110DF06, 0x5B4B5A2B078ACC11, 0x251131E4FADB0411, 0xED9902C92AE292A7, 0x6CE2358C95E9DE27, 0x8448D5CB4F5BA758, 0xD82325EB3A65F958, 0xD32A25435C1417E8, 0x74EA2D99371B3DD3, 0x4836BCA3D7893EB0, 0x1BB0417B29E41F09, 0x76981465878E3B9F, 0xB2F25B9C373D35DF, 0x6209B139986519F8, 0xCB5446D1DC986F1C, 0xC9B5C83B6B80BDBB, 0x61A17F81557E896C, 0x2AD12B8E6519933E, 0xC7F05BBBC057A8A1, 0x90675D52BD2AD8EE, 0xF27E03C013D78EE, 0x1EE4130DA1BEB763, 0x5B60DED0510F7126, 0x46A203004587CD26, 0x41B561A1DB0BF526, 0xDB4F6AFB517CAA97, 0x104E7479225FC897, 0xD7860597F3A82784, 0xB7C99BD22EA62D84, 0x1473D944D478BF6D, 0x271D42CDE974CA13, 0xE9B08F8A305C1813, 0xD9172BC30EA0C413, 0x7813B4E3606FC090, 0x5474DEB85101C790, 0x28AE3D82027D7021, 0x5CE031659A1336C4, 0xCE5EA78E295332C4, 0xAD6EE7A8F60CF48D, 0xE94A91C87D359993, 0x8358D23D5B6AA1C4, 0x33065B2CE67199C4, 0xB7293C580C5CEBC4, 0x9FA78FE49EA5BE63, 0xC3970C3AFD179263, 0x84CE94CDE4C71D46, 0x62C128812A74B401, 0x1A960BAC31479001, 0x924129303B0C6623, 0x1E43CFD717A03C23, 0xEC9C0FA45DB19B33, 0x287A2DFB5426E014, 0xA7C6887FEFAE5214, 0x78DD24C0DFA336A9, 0x4646DE8A2C2260A9, 0xB26DB12C64402431, 0xE2CC01CB09CFEE92, 0xA300D2814A86F292, 0x58EB0F927EC087BA, 0x53AC8B81EFB6B3EF, 0xD1194CA0DFD84E71, 0x540FFC9ABF4D1C71, 0x2817D9F620410AAB, 0xFE954C2AB500A26C, 0x9A2AC488B9A20367, 0x8CA98CAB90496767, 0x7CB2FD72D9F7E750, 0xA0D0728A5217E685, 0xED358375E81ADC45, 0xD1158AB128D1612, 0x6412E56491F7A844, 0x53C3A67780728688, 0x55D610A146766288, 0x2260525D9E3BC7E1, 0xEE1666055661D66B, 0x2D478C106B96E75F, 0x96B3090D4737B43C, 0xAEDFEAE1DA4B4A3C, 0xCD44D3EA9AA69F9, 0xA09D415BF0C4F7F9, 0xF8ED8EE8FD98B033, 0xB6B3BBB4D62E2833, 0xD526D0293C468C72, 0xDA2DA111DA839365, 0x6592DB090641CF65, 0x84C8843745D2C9B4, 0xC8260B78F36046D2, 0x6471AA8E21792348, 0x7B18CDB33695211E, 0x1682104E08EC431E, 0x1F2C3D47B06E8F92, 0x39FB3AAB60747A6E, 0x6210546E7BC8437E, 0x305ADB91AED5417E, 0xC14FCE9F4D0CDDDC, 0x83D5FD08748F23DC, 0x279290CFAA323574, 0x3477FE44EBB0D877, 0x5C89515738504673, 0x5C56A17E303F4F10, 0x246C2D82D7307910, 0x1CDFD324584E9B2F, 0xF28FE2A54D43D40B, 0xF26525FA854C5455, 0x7ADB3922C3375E9C, 0x10782EB723BD3EEA, 0x2EA9B4019665D542, 0xFE4AE0A57BE53B42, 0x499CC9BA6742327A, 0xCE67EE7E41C5B577, 0x15088E3052C0FDE6, 0x5B5ADA4EB6EEB1E6, 0xDB9BACF329A0D0A8, 0x5A105FFE3588DAE, 0xAFA81A11C2B9C1AE, 0xF2E50A2B104318B2, 0x2A2EC1BC46ED2531, 0x8FBCEB26790C86B9, 0x35882F5ECBA9DE8A, 0xE86B8504887C048A, 0x96E7973E5CA748C1, 0xA551BADC6B87D8D9, 0xCE76E79EDCA5BF52, 0xAAFCFAE612553DDA, 0xCA72CCC25FE940EC, 0xF1D6429D1596D2F3, 0xB0A50C81ECC04F3, 0x743777FB0FA3B436, 0x9D956AEDB97927AD, 0xC8CE518BE6ED5987, 0x7538CEE45D9ECEB4, 0xAD7853E47B3A30B4, 0x4B18956B08933A94, 0x67CDFE9DBA3575EA, 0x33120F6A3BA0DEA, 0x2FFFB7DFE47E62E9, 0xF6E1381780B34839, 0xCD27763A0661F639, 0x1D5FA4FB2307CE79, 0x8F228E7320ACF3EB, 0x5B1F839051230514, 0xB9F475E13EE86914, 0x4646AAD73FB3CA1E, 0x5BF270BF084C2335, 0xAD6DEB1926605949, 0xBF1A248CECA33B7D, 0xF34A8C97CE7F3240, 0xD1E7E757212847A1, 0xEE9C24A04834AC86, 0x6A056B4BA2C2CCA, 0x6E6276BBE71B7E4, 0xD4679F6EC77BE5E4, 0x9A8A97989CD52FE4, 0xC21182422FF7B802, 0xB1B23966D179E028, 0xFD57F74596906DD7, 0xD774961E4FCE318, 0x94455FF97AE6CD88, 0xE6E26D30E3714D88, 0x7A1365EF5025355, 0xC589CC06B2AC0199, 0x467D745262AE4608, 0x9F74012BDF96C4A4, 0x74E9E2DBCCE938A4, 0x179DAA02A300B5, 0x1EA667D32094E4B5, 0xEACB6E8920926B34, 0xCD8F49EB2C089B0C, 0x5A42ED9579C1AD0C, 0xA317C8D796E45F61, 0x639C0DDED68BBB61, 0x5410768FD565698C, 0x26FF98447488C98C, 0x5F1C1495B4811F8C, 0xE3502216D5081274, 0x4AF13C21D9514B70, 0x1C52A002CA1CCDD5, 0x8ECBB08EABFEC60E, 0x8311D9E5771D5BF5, 0x54025EA6427675B3, 0xE4FD56EA9245D4D8, 0x5390C886529A5DED, 0x187B39AB349B841C, 0x822E4C723E718F24, 0x107A3A48D9A73324, 0x272D2968FEEFE43F, 0x2B06AADB5DCE2B94, 0x3A3AF65C709A931B, 0x577F81DD3B5F6D44, 0x672C34A5A1DBA034, 0x41278652133F2434, 0x5D402953FE76A900, 0x1E870A3C18B83700, 0x77C2BA7C2A654BDE, 0x635695D8C5D3A38B, 0xE42124E9CEF6D1B7, 0x449215E51EF4990A, 0xBE73C6ADBC254BB2, 0x882088811AB29C42, 0xBAB890ED14064962, 0x2752E220AA2B6354, 0x38DC056722CB6C47, 0xB700426908F6B62A, 0xBCDA578085166FD2, 0x2DE0E7F29D392E65, 0x311F4C4ECA1B28D6, 0xFED9C7D6A48EF504, 0x8A0FD365BBDBE0DC, 0x93550F5E52290532, 0x34D5C901F7FEB740, 0xA97D91202358AE82, 0x4A3F3DC32D147CAF, 0x1A7E10FDBDC546D3, 0x87CB71DBF01D6C03, 0xEB3D975D84C6CE25, 0xB9ED1296A01BC007, 0x20B40CFC696E5607, 0xC32FC2FE83524F1, 0x99E24912688D846F, 0x31CF831DB8D3F383, 0xF1C370482910054D, 0x70D5916C443DC604, 0xE130E8B21073884C, 0x93F406F44FB22400, 0x492BE6488F8E09C6
+rtx.decalTextures = 0xA29AEC4A3D81DFDC
+rtx.di.enableDenoiserConfidence = False
+rtx.restirGI.useSampleStealing = 1
+rtx.di.permutationSamplingNthFrame = 1
+rtx.di.stealBoundaryPixelSamplesWhenOutsideOfScreen = False
+rtx.ignoreTextures = 0x4931B9EC8F68722, 0xB1B3C04B07B5ACEA, 0x748B4991EA9E481, 0xB5C86BEE8E84357E
+rtx.enableAlwaysCalculateAABB = True
+rtx.dlfg.enable = False
 rtx.qualityDLSS = 3
-rtx.enableIndirectTranslucentShadows = True
 rtx.dlssPreset = 2
-rtx.sceneScale = 0.01
-rtx.dynamicDecalTextures = 0xBE686B6B6B8AE7ED
-rtx.emissiveBlendOverrideEmissiveIntensity = 0.02
-rtx.vertexColorStrength = 0.8
-rtx.emissiveIntensity = 10
-rtx.terrainBaker.cascadeMap.levelHalfWidth = 0.001
-rtx.enableCulling = False
-rtx.enableDirectTranslucentShadows = True
-rtx.ignoreGamePointLights = True
+rtx.usePartialDdsLoader = False
+rtx.restirGI.boilingFilterMinThreshold = 15
+rtx.enableFirstBounceLobeProbabilityDithering = False
 rtx.enableUnorderedEmissiveParticlesInIndirectRays = True
+rtx.enableVolumetricLighting = True
 rtx.fallbackLightMode = 0
-rtx.psrrMaxBounces = 16
-rtx.freeCameraSpeed = 50
-rtx.ignoreGameDirectionalLights = True
-rtx.ignoreGameSpotLights = True
-rtx.localtonemap.boostLocalContrast = True
 rtx.instanceOverrideInstanceIdx = 2147483647
-rtx.legacyMaterial.metallicConstant = 0
-rtx.tonemap.finalizeWithACES = True
-rtx.legacyMaterial.roughnessConstant = 0.8
-rtx.postfx.enableMotionBlur = False
-rtx.lightConversionDistantLightFixedAngle = 0.01
-rtx.particleTextures = 0xA79A316B36E6FB9A, 0x48188D919022F08A, 0x76BD5D19A139B6BC, 0x2549846347288884, 0xB1A0314C29C432C, 0xB573F6EEBBA1EC5D, 0xACD424B612C0C659, 0x7EBF6573670698B7, 0x448152B6FE9F348C, 0x44AF0EF987753198, 0xEA35A9BFBDAE3C3B, 0x580CD934A0C8CA56, 0xB51546930E6B5738, 0x30FBB9D0E1586D7A, 0x8C52CF580459757A, 0x8B85191E03DA6C31, 0x5D81D806AE2DE92, 0x166C27331EA67091, 0x4DBD066761A29F5B, 0x2F580E4763FAB662, 0x2EB7CD8C1AB18715
-rtx.lightConversionEqualityDistanceThreshold = 0.01
-rtx.localtonemap.exposure = 1
-rtx.terrainBaker.cascadeMap.defaultHeight = 10
-rtx.localtonemap.exposurePreferenceSigma = 2
-rtx.tonemap.exposureBias = 1
-rtx.pstrMaxBounces = 16
-rtx.localtonemap.highlights = 2
-rtx.localtonemap.mip = 8
-rtx.postfx.enableChromaticAberration = False
-rtx.postfx.enableVignette = False
-rtx.skyBoxTextures = 0xD686DC607FB7978C, 0x7C580F06692E4693, 0x5F0BCF2A981B2F8B, 0xB06AEDEB93824BAE, 0x69F3E105E1545935
-rtx.skyBrightness = 3
-rtx.skyDrawcallIdThreshold = 1000
-rtx.terrainBaker.material.properties.metallicConstant = 0.2
-rtx.terrainBaker.cascadeMap.maxLevels = 16
-rtx.terrainTextures = 0xA7126B29C7A1F586, 0x7B1116EE80CDA9D6, 0x8B58CC4A15D2374E, 0x44FC8A58BEA07908
-rtx.zUp = True
+rtx.minOpaqueDiffuseLobeSamplingProbability = 0.05
+rtx.restirGI.sampleStealingJitter = 3
+rtx.minOpaqueSpecularLobeSamplingProbability = 0.05
+rtx.opacityMicromap.showAdvancedOptions = True
+rtx.particleTextures = 0x9A8E8191471533D5, 0xD4220861A515C770
+rtx.postFilterThreshold = 10
+rtx.suppressLightKeeping = True
+rtx.restirGI.historyDiscardStrength = 10
+rtx.restirGI.useAdaptiveTemporalHistory = False
+rtx.restirGI.useDLSSRRCompatibilityMode = True
+rtx.restirGI.useVirtualSample = False
+rtx.restirGI.validateVisibilityChange = True
+rtx.russianRouletteMode = 1
+rtx.sceneScale = 0.01
+rtx.skyBoxTextures = 0x7A4F053D4D0C4437, 0x294AFA03D0A0EC8F, 0xBBC7C2A811DC27AF, 0xD90E0FB3CC373950, 0xD4B43B810BECAFE8, 0xEB05F3829A0BA3B0, 0xEBABE67E3BB17A9D, 0x79452E6A6F0D6C0E, 0xDB44893153AB9DFB, 0xA3DB5B6EB9628265, 0x56F9D8C7499BC624, 0x9B80DC0B3042D274
+rtx.usePostFilter = False
