--- a/rtx.conf
+++ b/rtx.conf
@@ -2,14 +2,14 @@ rtx.autoExposure.enabled = False
 rtx.usePostFilter = False
 rtx.allowFSE = True
 rtx.pathMinBounces = 0
-rtx.uiTextures = 0x5825FA46CF812787, 0x2FB7ADBE915018A, 0x1D3D385E969C83FA, 0x3259CE3885F90642, 0x3781F525BBBD9FBD, 0x9D36811F7D6CB321, 0x3FC78C823061BDB0, 0x5970DA3808FA8128, 0xC412E7D486FF9E5C
+rtx.uiTextures = 0x5825FA46CF812787, 0x3259CE3885F90642, 0x1D3D385E969C83FA, 0x2FB7ADBE915018A, 0x3781F525BBBD9FBD, 0x9D36811F7D6CB321, 0x5970DA3808FA8128, 0x3FC78C823061BDB0, 0xC412E7D486FF9E5C, 0xEDAA7402F2B0E4BB
 rtx.restirGI.virtualSampleMaxDistanceRatio = 0.5
 rtx.neeCache.enableModeAfterFirstBounce = 2
-rtx.animatedWaterTextures = 0x4FFDCE29E1793968, 0xC120BA4E84CE7AE8, 0x3EF016691656F970, 0xDE8822B32A6BC670, 0xC746F1683798424, 0xCD648C3913D2AAE4, 0x6E8F5B279EFEC93C, 0x6363571649761AFC, 0x51DB758F888C8A7C, 0x418DEBB0F4A2A197, 0x334EFD7D0C9A0557, 0x71C53CBDEFFBA77, 0xC75EC8EE882E2237, 0x66ABA8DF426979B7, 0x1225B4DFF6506137, 0x7492C2957CEB1377, 0x5D20FD88C0A70C13, 0x566FF5AF1575B4F6, 0xA006DCDD5668F14C, 0x1A1A35CA8382015E, 0xDD8A0AE1E5EB9369, 0x1D024B67914A61A9, 0x1DE1B1AA2398A7DC, 0xD9EDCDEC1D0221F2, 0x9BD20D5EED3F151F, 0x5FAE7571446D5A1F, 0xE692218518A4111F, 0x434FC43F7BF7EC1F, 0x80A5DB2A47161FDF, 0xEFA8FB7D8D3AA6C3, 0x47F0D076364FE100, 0xD04D48CB7D9648C0, 0x4E8D2FCE735ACA80, 0x5D69653013D1FE27, 0xDC55F6D9DEBCADB, 0xFAD6ECF37BFBDB, 0xF40C8156FAB61149, 0x2FAC7A403DB8EF89, 0xDB6D83AA39677D42, 0x91E3C33F56C7C402, 0x91548A1865B639AC, 0x9B7E84B205AABCF3, 0xDFE4F77C157CEA2, 0x9A6022AB4E9D706A, 0x923E2560A8DB36F4, 0xCE2FA1C23180ECA3, 0x6E419569F50C57A3, 0x7EAA20F654D73E23, 0x278367335989356B, 0x8398EA381E2D5BAB, 0xD48CB1BB322048DA, 0x48519E8FE2DC6D8B, 0xDB5C2DFA92C01020, 0x3DFD2B96C1930F78, 0xA4EED0463F70FD79, 0x2502A4AFB4CADBB, 0x529A2C691C741B21, 0x120BED9788C58EDD, 0x71D279975B0F4808, 0x75007E056037B9BF
+rtx.animatedWaterTextures = 0x3EF016691656F970, 0xDE8822B32A6BC670, 0x4FFDCE29E1793968, 0xC120BA4E84CE7AE8, 0x6E8F5B279EFEC93C, 0x6363571649761AFC, 0x51DB758F888C8A7C, 0xCD648C3913D2AAE4, 0xC746F1683798424, 0x334EFD7D0C9A0557, 0x418DEBB0F4A2A197, 0x7492C2957CEB1377, 0x1225B4DFF6506137, 0x66ABA8DF426979B7, 0xC75EC8EE882E2237, 0x71C53CBDEFFBA77, 0x5D20FD88C0A70C13, 0x566FF5AF1575B4F6, 0xA006DCDD5668F14C, 0x1A1A35CA8382015E, 0x1D024B67914A61A9, 0xDD8A0AE1E5EB9369, 0x1DE1B1AA2398A7DC, 0xD9EDCDEC1D0221F2, 0x80A5DB2A47161FDF, 0x434FC43F7BF7EC1F, 0xE692218518A4111F, 0x5FAE7571446D5A1F, 0x9BD20D5EED3F151F, 0xEFA8FB7D8D3AA6C3, 0x4E8D2FCE735ACA80, 0xD04D48CB7D9648C0, 0x47F0D076364FE100, 0x5D69653013D1FE27, 0xFAD6ECF37BFBDB, 0xDC55F6D9DEBCADB, 0x2FAC7A403DB8EF89, 0xF40C8156FAB61149, 0x91E3C33F56C7C402, 0xDB6D83AA39677D42, 0x91548A1865B639AC, 0x9B7E84B205AABCF3, 0xDFE4F77C157CEA2, 0x9A6022AB4E9D706A, 0x923E2560A8DB36F4, 0x7EAA20F654D73E23, 0x6E419569F50C57A3, 0xCE2FA1C23180ECA3, 0x8398EA381E2D5BAB, 0x278367335989356B, 0xD48CB1BB322048DA, 0x48519E8FE2DC6D8B, 0xDB5C2DFA92C01020, 0x3DFD2B96C1930F78, 0xA4EED0463F70FD79, 0x2502A4AFB4CADBB, 0x529A2C691C741B21, 0x120BED9788C58EDD, 0x71D279975B0F4808, 0x75007E056037B9BF
 rtx.autoExposure.evMinValue = 0
 rtx.restirGI.boilingFilterRemoveReservoirThreshold = 30
 rtx.minReplacementTextureMipMapLevel = 1
-rtx.decalTextures = 0x960E9DA1FBC8D55C, 0xA29AEC4A3D81DFDC, 0x5B1F839051230514, 0xFDFC58D603A94554, 0x1B91964934D3E1B1, 0x20D2BD9A8F8CB7F1, 0x86E7F5D9BDCB6871, 0x64DC83584D2F7779, 0xFC343E2104C444F9, 0xE857B38281B72432, 0x470163CEBDD9080F, 0xBBB8BF8C92DEC94F, 0x270E41E9BF89516, 0xC7593BF9215112DD, 0x1A2F5F13EC1D6CDD, 0x62DC87C416A654CD, 0x1A1B9A4E6CAF5E9E, 0xE099A3A212027ADE, 0x38FA6E19237E82FE, 0x2E80B8878F003D7A, 0x5F3832E42403337A, 0xB97DAA02F39D2524, 0xDB4F6AFB517CAA97, 0x56190D6EE7379FE5, 0x45ABC0B544E897FF, 0xBE686B6B6B8AE7ED, 0x39E5406DC4D3006D, 0xDD0B477219193EA2, 0x66EFA5FE769C8102, 0xA244C9C2D5956E1A, 0x4B0B6CE7E032DD29, 0x76CF04376B04B8B4, 0xD0A66A65C7528968, 0xC8EDDFB620CA8A5F, 0xA6D7045F8740A5DF, 0xCA4EAF478D3E998C, 0x432E891037A5F4CE, 0x791CFC283E2D00E1, 0x35BF4E34E77A0B7C, 0x98F1B88719A0D2C8, 0x78F9BBFB79156E88, 0x26626F3D0B9542FD, 0x11C6FD244CAED049, 0xC1DEE32B1A6EDBE3
+rtx.decalTextures = 0x5B1F839051230514, 0xFDFC58D603A94554, 0x960E9DA1FBC8D55C, 0xA29AEC4A3D81DFDC, 0x64DC83584D2F7779, 0xFC343E2104C444F9, 0x20D2BD9A8F8CB7F1, 0x86E7F5D9BDCB6871, 0x1B91964934D3E1B1, 0xE857B38281B72432, 0xBBB8BF8C92DEC94F, 0x470163CEBDD9080F, 0x270E41E9BF89516, 0x1A2F5F13EC1D6CDD, 0xC7593BF9215112DD, 0x62DC87C416A654CD, 0xE099A3A212027ADE, 0x1A1B9A4E6CAF5E9E, 0x38FA6E19237E82FE, 0x5F3832E42403337A, 0x2E80B8878F003D7A, 0xB97DAA02F39D2524, 0xDB4F6AFB517CAA97, 0x56190D6EE7379FE5, 0x45ABC0B544E897FF, 0x39E5406DC4D3006D, 0xBE686B6B6B8AE7ED, 0xDD0B477219193EA2, 0x66EFA5FE769C8102, 0x6BD6FA2D62E32EDA, 0xA244C9C2D5956E1A, 0x4B0B6CE7E032DD29, 0x76CF04376B04B8B4, 0xD0A66A65C7528968, 0xA6D7045F8740A5DF, 0xC8EDDFB620CA8A5F, 0xCA4EAF478D3E998C, 0x432E891037A5F4CE, 0x791CFC283E2D00E1, 0x35BF4E34E77A0B7C, 0x98F1B88719A0D2C8, 0x78F9BBFB79156E88, 0x26626F3D0B9542FD, 0x11C6FD244CAED049, 0xC1DEE32B1A6EDBE3, 0x3F3E25323C1E0220, 0x73AC780C8EDE6485
 rtx.graphicsPreset = 1
 rtx.demodulate.enableDirectLightBoilingFilter = False
 rtx.di.enableDenoiserConfidence = False
@@ -18,11 +18,13 @@ rtx.ignoreGameDirectionalLights = True
 rtx.di.permutationSamplingNthFrame = 1
 rtx.postfx.enableVignette = False
 rtx.di.stealBoundaryPixelSamplesWhenOutsideOfScreen = False
-rtx.ignoreTextures = 0xB1B3C04B07B5ACEA, 0x4931B9EC8F68722, 0x748B4991EA9E481, 0xB5C86BEE8E84357E, 0x9D6A9F7B9355F09F, 0x801DDFEFD4AD85F, 0xBCCFDFAAE0F4E2AF, 0x8F34BF39FA23F39D, 0x188BFFED5020950B, 0x63F56BAD1D42704D, 0x12327A08E725DEE0, 0x6F0AB36E2C7DB1A6, 0x6D2446E17BAC3050, 0x72F44E5A77F84F90, 0xBC9E2A1A5E437634, 0xE2D32425EB3234C0, 0x8CA564E68A98C4A7, 0x650AB0CEFBAFD10F, 0x4DBD066761A29F5B
+rtx.ignoreTextures = 0x4931B9EC8F68722, 0xB1B3C04B07B5ACEA, 0x748B4991EA9E481, 0xB5C86BEE8E84357E, 0xBCCFDFAAE0F4E2AF, 0x9D6A9F7B9355F09F, 0x801DDFEFD4AD85F, 0x8F34BF39FA23F39D, 0x188BFFED5020950B, 0x63F56BAD1D42704D, 0x12327A08E725DEE0, 0x6F0AB36E2C7DB1A6, 0x72F44E5A77F84F90, 0x6D2446E17BAC3050, 0xBC9E2A1A5E437634, 0xE2D32425EB3234C0, 0x8CA564E68A98C4A7, 0x650AB0CEFBAFD10F, 0x4DBD066761A29F5B
 rtx.fallbackLightRadius = 3
 rtx.dlfg.enable = False
 rtx.restirGI.useAdaptiveTemporalHistory = False
 rtx.emissiveIntensity = 10
+rtx.restirGI.useDLSSRRCompatibilityMode = True
+rtx.enableCulling = False
 rtx.restirGI.boilingFilterMinThreshold = 15
 rtx.fallbackLightType = 1
 rtx.enableFirstBounceLobeProbabilityDithering = False
@@ -36,22 +38,20 @@ rtx.freeCameraSpeed = 50
 rtx.instanceOverrideInstanceIdx = 2147483647
 rtx.stochasticAlphaBlendOpacityThreshold = 0.2
 rtx.lightmapTextures = 0xB6E06CE024FE9111
-rtx.localtonemap.shadows = 3
+rtx.localtonemap.shadows = 2.5
 rtx.minOpaqueDiffuseLobeSamplingProbability = 0.05
 rtx.restirGI.sampleStealingJitter = 3
 rtx.minOpaqueSpecularLobeSamplingProbability = 0.05
 rtx.opacityMicromap.showAdvancedOptions = True
-rtx.particleTextures = 0x9A8E8191471533D5, 0xB573F6EEBBA1EC5D, 0xD4220861A515C770, 0x166C27331EA67091, 0x448152B6FE9F348C, 0x76BD5D19A139B6BC, 0xEA35A9BFBDAE3C3B, 0x5D81D806AE2DE92, 0xB51546930E6B5738, 0xCE919FA9A67900C4, 0x2F580E4763FAB662, 0x4EEAC3D05034C372, 0x7A8BAF2D1E21CC24, 0xBE5F9FBE5DF344A8, 0xC97B2D2D38F5CF97, 0xEF687DB43CD24DE3
+rtx.particleTextures = 0xB573F6EEBBA1EC5D, 0x9A8E8191471533D5, 0xD4220861A515C770, 0x166C27331EA67091, 0x76BD5D19A139B6BC, 0x448152B6FE9F348C, 0xEA35A9BFBDAE3C3B, 0x5D81D806AE2DE92, 0xB51546930E6B5738, 0xCE919FA9A67900C4, 0x2F580E4763FAB662, 0x4EEAC3D05034C372, 0x7A8BAF2D1E21CC24, 0xBE5F9FBE5DF344A8, 0xC97B2D2D38F5CF97, 0xEF687DB43CD24DE3, 0x44AF0EF987753198
 rtx.postFilterThreshold = 10
 rtx.postfx.enableChromaticAberration = False
-rtx.restirGI.useDLSSRRCompatibilityMode = True
 rtx.restirGI.useVirtualSample = False
 rtx.restirGI.validateVisibilityChange = True
 rtx.russianRouletteMode = 1
 rtx.sceneScale = 0.01
-rtx.skyBoxTextures = 0xBBC7C2A811DC27AF, 0x294AFA03D0A0EC8F, 0x7A4F053D4D0C4437, 0xEB05F3829A0BA3B0, 0xD4B43B810BECAFE8, 0xD90E0FB3CC373950, 0xEBABE67E3BB17A9D, 0x79452E6A6F0D6C0E, 0xDB44893153AB9DFB, 0xA3DB5B6EB9628265, 0x56F9D8C7499BC624, 0x9B80DC0B3042D274
-rtx.skyBrightness = 0.5
+rtx.skyBoxTextures = 0x7A4F053D4D0C4437, 0x294AFA03D0A0EC8F, 0xBBC7C2A811DC27AF, 0xD90E0FB3CC373950, 0xD4B43B810BECAFE8, 0xEB05F3829A0BA3B0, 0xEBABE67E3BB17A9D, 0x79452E6A6F0D6C0E, 0xDB44893153AB9DFB, 0xA3DB5B6EB9628265, 0x56F9D8C7499BC624, 0x9B80DC0B3042D274
+rtx.skyBrightness = 3
 rtx.skyDrawcallIdThreshold = 6000
-rtx.skyForceHDR = True
 rtx.tonemap.finalizeWithACES = True
 rtx.zUp = True
